[package]
name = "v6prac"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "1.0.0"
femtovg = "0.7.1"
glutin = "0.30.10"
winit = "0.28.7"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.0"